--- a/desafio-pre-entrega-3-FrontEnd-BackEnd/Backend/package.json
+++ b/desafio-pre-entrega-3-FrontEnd-BackEnd/Backend/package.json
@@ -14,6 +14,7 @@
     "nodemon": "^3.0.1"
   },
   "dependencies": {
+    "@faker-js/faker": "^8.3.1",
     "bcrypt": "^5.1.1",
     "commander": "^11.1.0",
     "connect-mongo": "^5.1.0",
@@ -27,6 +28,7 @@
     "mongoose": "^7.6.2",
     "mongoose-paginate-v2": "^1.7.4",
     "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.7",
     "passport": "^0.6.0",
     "passport-github2": "^0.1.12",
     "passport-jwt": "^4.0.1",
