--- a/desafio-pre-entrega-3-FrontEnd-BackEnd/Backend/src/docs/carts/carts.yaml
+++ b/desafio-pre-entrega-3-FrontEnd-BackEnd/Backend/src/docs/carts/carts.yaml
@@ -1,1 +1,89 @@
-//Ver logica de carrito!!!
+paths:
+  /api/carts/:
+    get:
+      summary: Obtener a todos los productos
+      tags:
+        - Carts
+      responses:
+        '200':
+          description: Carrito obtenido correctamente
+          content: 
+            application/json:
+              schema: 
+                type: array
+                items:
+                  $ref: '#/components/schemas/Carts'
+        '500':
+          description: Error interno del servidor
+    post:
+      summary: Agregar un nuevo producto al carrito
+      tags:
+        - Carts
+      parameters:
+        - name: body 
+          in: body
+          required: true
+          schema:
+            type: object
+            properties:
+              title: 
+                type: string
+              description: 
+                type: string
+              price: 
+                type: string
+              stock: 
+                type: string
+              category: 
+                type: string 
+              code: 
+                type: string  
+      responses:
+        '200':
+          description: Producto agregado al carrito correctamente
+          content: 
+            application/json:
+              schema: 
+                items:
+                  $ref: '#/components/schemas/Carts'
+        '404':
+          description: Error interno del servidor
+    
+components:
+  schemas:
+    Product:
+      type: object
+      properties:
+        _id:
+          type: string
+          description: "ID autogenerado por MongoDB"
+        title:
+          type: string
+          description: "Título del producto"
+        description:
+          type: string
+          description: "Descripción del producto"
+        price:
+          type: string
+          description: "Precio del producto"
+        stock:
+          type: string
+          description: "Stock del producto"
+        category:
+          type: string
+          description: "Categoría del producto"
+        status:
+          type: boolean
+          description: "Estado del producto"
+        code:
+          type: string
+          description: "Código del producto"
+      example:
+        _id: "65766e9922edd16f2f0d6bd9"
+        title: "almendras"
+        description: "mendoza"
+        price: "1000"
+        stock: "10"
+        category: "fruto seco"
+        status: true
+        code: "A222"
