--- a/desafio-pre-entrega-3-FrontEnd-BackEnd/Backend/src/docs/carts/carts.yaml
+++ b/desafio-pre-entrega-3-FrontEnd-BackEnd/Backend/src/docs/carts/carts.yaml
@@ -1,54 +1,59 @@
 paths:
-  /api/carts/:
+  /api/carts/{id}:
     get:
-      summary: Obtener a todos los productos
+      summary: Obtener carrito por Id
       tags:
-        - Carts
+        - carts
+      parameters:
+        - name: id
+          in: path
+          required: true
+          schema:
+            type: string
+          description: Id del carrito obtenido
       responses:
         '200':
-          description: Carrito obtenido correctamente
-          content: 
+          description: Producto obtenido correctamente
+          content:
             application/json:
-              schema: 
-                type: array
-                items:
-                  $ref: '#/components/schemas/Carts'
+              schema:
+                $ref: '#/components/schemas/Carts'
         '500':
           description: Error interno del servidor
+
     post:
       summary: Agregar un nuevo producto al carrito
       tags:
-        - Carts
+        - carts
       parameters:
-        - name: body 
+        - name: body
           in: body
           required: true
           schema:
             type: object
             properties:
-              title: 
+              title:
                 type: string
-              description: 
+              description:
                 type: string
-              price: 
+              price:
                 type: string
-              stock: 
+              stock:
                 type: string
-              category: 
-                type: string 
-              code: 
-                type: string  
+              category:
+                type: string
+              code:
+                type: string
       responses:
         '200':
           description: Producto agregado al carrito correctamente
-          content: 
+          content:
             application/json:
-              schema: 
-                items:
-                  $ref: '#/components/schemas/Carts'
+              schema:
+                $ref: '#/components/schemas/Carts'
         '404':
           description: Error interno del servidor
-    
+
 components:
   schemas:
     Product:
