--- a/desafio-pre-entrega-3-FrontEnd-BackEnd/Backend/src/docs/users/users.yaml
+++ b/desafio-pre-entrega-3-FrontEnd-BackEnd/Backend/src/docs/users/users.yaml
@@ -12,7 +12,7 @@ paths:
               schema: 
                 type: array
                 items:
-                  $ref: '#/components/schemas/User'
+                  $ref: '#/components/schemas/Users'
         '500':
           description: Error interno del servidor
     post:
@@ -41,7 +41,7 @@ paths:
             application/json:
               schema: 
                 items:
-                  $ref: '#/components/schemas/User'
+                  $ref: '#/components/schemas/Users'
         '500':
           description: Error interno del servidor
   /api/users/{id}:  
@@ -63,7 +63,7 @@ paths:
             application/json:
               schema: 
                 items:
-                  $ref: '#/components/schemas/User'
+                  $ref: '#/components/schemas/Users'
         '500':
           description: Error interno del servidor
     put:
@@ -98,7 +98,7 @@ paths:
             application/json:
               schema: 
                 items:
-                  $ref: '#/components/schemas/User'
+                  $ref: '#/components/schemas/Users'
         '500':
           description: Error interno del servidor
     delete:
@@ -119,12 +119,12 @@ paths:
             application/json:
               schema: 
                 items:
-                  $ref: '#/components/schemas/User'
+                  $ref: '#/components/schemas/Users'
         '500':
           description: Error interno del servidor
 components:
   schemas:
-    User: 
+    Users: 
       type: object
       properties:
         _id: 
