--- a/desafio-pre-entrega-3-FrontEnd-BackEnd/Backend/package.json
+++ b/desafio-pre-entrega-3-FrontEnd-BackEnd/Backend/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "dev": "nodemon src/index.js",
     "supertest": "mocha test/supertest.test.js",
-    "supertestproduct": "mocha test/supertestproduct.test.js"
+    "supertestproduct": "mocha test/supertestproduct.test.js",
+    "test": "mocha test/user.test.js"
   },
   "keywords": [],
   "author": "",
@@ -15,7 +16,7 @@
   "devDependencies": {
     "chai": "^5.0.0",
     "mocha": "^10.2.0",
-    "nodemon": "^3.0.2",
+    "nodemon": "^3.0.3",
     "supertest": "^6.3.3"
   },
   "dependencies": {
