--- a/desafio-pre-entrega-3-FrontEnd-BackEnd/Frontend/package.json
+++ b/desafio-pre-entrega-3-FrontEnd-BackEnd/Frontend/package.json
@@ -10,7 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "bootstrap": "^5.3.2",
+    "jwt-decode": "^4.0.0",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.10.1",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.18.0"
   },
